server/etc/k8s/01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adm-server-1-deployment
  namespace: adm
  labels:
    app: adm-server-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adm-server-1
  template:
    metadata:
      labels:
        app: adm-server-1
    spec:
      containers:
        - name: adm-server-1
          image: docker.pkg.github.com/didream/adm-visualizacion-datos-i/adm-server:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: dockerconfigjson-github-com
