server/etc/k8s/03-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: adm-server-1
  namespace: adm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  rules:
  - http:
      paths:
      - path: /adm-1/api(/|$)(.*)
        backend:
          serviceName: adm-server-1
          servicePort: 3000
